fix: scrollbars hidden when not needed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,10 +7,12 @@
   width: 6px;
   height: 6px;
   position: fixed;
+  display: none;
 }
 
 ::-webkit-scrollbar-track {
   background: transparent;
+  display: none;
 }
 
 ::-webkit-scrollbar-thumb {
